Updating processor probes to Java 11.